# amicis

./: Cargo.toml  README.md
crates/amicis_cli/: Cargo.toml
crates/amicis_cli/src/: args.rs  lib.rs
crates/amicis_core/: Cargo.toml
crates/amicis_core/src/: lib.rs  test.rs
crates/amicis_server/: Cargo.toml
crates/amicis_server/src/: main.rs
crates/amicis_server/src/web/: error.rs  mod.rs
crates/amicis_server/src/web/routes/: api.rs  mod.rs  ui.rs
crates/json_api/: Cargo.toml
crates/json_api/src/: lib.rs
crates/json_api/src/v1/: mod.rs
crates/json_api/src/v1/links/: mod.rs
crates/json_api/src/v1/resource/: mod.rs
crates/json_api/src/v2/: mod.rs
